--- a/.npmrc
+++ b/.npmrc
@@ -4,4 +4,4 @@ fetch-retry-mintimeout=10000
 fetch-retry-maxtimeout=120000
 fetch-timeout=120000
 prefer-offline=false
-strict-ssl=true
+progress=false
