--- a/package.json
+++ b/package.json
@@ -3,30 +3,38 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "vite",
-    "start": "vite",
-    "build": "vite build",
+    "start": "node server.js",
+    "build": "tsc --skipLibCheck && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-  "server": "node server.js",
-  "test:verify-update": "node test/verify-update-product.mjs"
+    "server": "node server.js",
+    "test:verify-update": "node test/verify-update-product.mjs",
+    "clean": "rimraf dist node_modules",
+    "vercel-build": "tsc --skipLibCheck && vite build",
+    "prebuild": "npm install"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.55.0",
+    "@supabase/supabase-js": "^2.39.3",
+    "chrome-aws-lambda": "^10.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "googleapis": "^156.0.0",
+    "dotenv": "^16.4.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "googleapis": "^129.0.0",
+    "html-pdf": "^3.0.1",
     "lucide-react": "^0.344.0",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
-  "pdfkit": "^0.17.1",
-  "ejs": "^3.1.9",
-  "html-pdf": "^3.0.1",
-  "puppeteer": "^21.3.8",
+    "pdfkit": "^0.17.1",
+    "puppeteer-core": "^10.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0",
     "stream-buffers": "^3.0.3"
   },
@@ -41,8 +49,9 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
+    "typescript": "^5.9.2",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
   }
