fix: update dependencies and package-lock.json

--- a/.npmrc
+++ b/.npmrc
@@ -5,3 +5,8 @@ fetch-retry-maxtimeout=120000
 fetch-timeout=120000
 prefer-offline=false
 progress=false
+legacy-peer-deps=true
+node-linker=hoisted
+strict-peer-dependencies=false
+auto-install-peers=true
+shamefully-hoist=true
